force-app/main/default/objects/NotificationSA__e/NotificationSA__e.object-meta.xml
<CustomObject>
    <description>CGI-FSL : Platform Event publié par salesforce pour envoyer les notifications sur Service Appointment</description>
    <label>NotificationSA</label>
    <pluralLabel>NotificationsSA</pluralLabel>
</CustomObject>