force-app/main/default/objects/NotificationSA__e/fields/fsl_actualEndDate__c.field-meta.xml
<CustomField>
    <fullName>fsl_actualEndDate__c</fullName>
    <description>CGI - FSL : Ce champ contient la fin réelle du rendez-vous.</description>
    <label>Actual end date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>