force-app/main/default/objects/NotificationSA__e/fields/fsl_actualStartDate__c.field-meta.xml
<CustomField>
    <fullName>fsl_actualStartDate__c</fullName>
    <description>CGI - FSL : Ce champ contient le début réel du rendez-vous.</description>
    <label>Actual start date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>