force-app/main/default/objects/NotificationSA__e/fields/fsl_arrivalWindowEnd__c.field-meta.xml
<CustomField>
    <fullName>fsl_arrivalWindowEnd__c</fullName>
    <description>CGI - FSL : Ce champ contient la fin de fenêtre d&apos;arrivé.</description>
    <label>Arrival window end</label>
    <length>255</length>
    <type>Text</type>
</CustomField>