force-app/main/default/objects/NotificationSA__e/fields/fsl_arrivalWindowStart__c.field-meta.xml
<CustomField>
    <fullName>fsl_arrivalWindowStart__c</fullName>
    <description>CGI - FSL : Ce champ contient le début de fenêtre d&apos;arrivé.</description>
    <label>Arrival window start</label>
    <length>255</length>
    <type>Text</type>
</CustomField>