force-app/main/default/objects/NotificationSA__e/fields/fsl_autorisationFinancement__c.field-meta.xml
<CustomField>
    <fullName>fsl_autorisationFinancement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CGI - FSL : Ce champ indique si l&apos;autorisation de financement est fourni.</description>
    <label>Autorisation financement</label>
    <type>Checkbox</type>
</CustomField>