force-app/main/default/objects/NotificationSA__e/fields/fsl_coutsProchainRDV__c.field-meta.xml
<CustomField>
    <fullName>fsl_coutsProchainRDV__c</fullName>
    <description>CGI - FSL : Ce champ contient le coût du prochain rendez-vous.</description>
    <label>Coût prochain rdv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>