force-app/main/default/objects/NotificationSA__e/fields/fsl_dateDebriefing__c.field-meta.xml
<CustomField>
    <fullName>fsl_dateDebriefing__c</fullName>
    <description>CGI - FSL : Ce champ contient la date de débriefing du rendez-vous.</description>
    <label>Date débriefing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>