force-app/main/default/objects/NotificationSA__e/fields/fsl_documentsFournis__c.field-meta.xml
<CustomField>
    <fullName>fsl_documentsFournis__c</fullName>
    <description>CGI - FSL : Avis d&apos;imposition sur le revenu
Chèque annulé
Num Pièce d&apos;identité (Perm.Cond, CI, Passeport)	
Relevé d&apos;identité bancaire	
Bulletin de salaire	
Attestation TVA</description>
    <label>Documents fournis</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>