force-app/main/default/objects/NotificationSA__e/fields/fsl_dureeProchainRdv__c.field-meta.xml
<CustomField>
    <fullName>fsl_dureeProchainRdv__c</fullName>
    <description>CGI - FSL : Ce champ contient la durée du prochain rendez-vous.</description>
    <label>Durée prochaine intervention (minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>