force-app/main/default/objects/NotificationSA__e/fields/fsl_externalId__c.field-meta.xml
<CustomField>
    <fullName>fsl_externalId__c</fullName>
    <description>CGI - FSL : Ce champs contient l&apos;ID externe du Work Order utilisé par GC</description>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>