force-app/main/default/objects/NotificationSA__e/fields/fsl_incidentsProduits__c.field-meta.xml
<CustomField>
    <fullName>fsl_incidentsProduits__c</fullName>
    <description>CGI - FSL : Les incidents sur les produits d&apos;un RDV</description>
    <label>Incidents produits</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>