force-app/main/default/objects/NotificationSA__e/fields/fsl_incidentsTravaux__c.field-meta.xml
<CustomField>
    <fullName>fsl_incidentsTravaux__c</fullName>
    <description>CGI - FSL : Les incidents sur les travaux d&apos;un RDV</description>
    <label>Incidents travaux</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>