force-app/main/default/objects/NotificationSA__e/fields/fsl_modeReglement__c.field-meta.xml
<CustomField>
    <fullName>fsl_modeReglement__c</fullName>
    <description>CGI - FSL : Ce champ contient le mode de réglement.</description>
    <label>Mode de réglement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>