force-app/main/default/objects/NotificationSA__e/fields/fsl_montantRecu__c.field-meta.xml
<CustomField>
    <fullName>fsl_montantRecu__c</fullName>
    <description>CGI - FSL : Ce champ contient le montant reçu par K par K.</description>
    <label>Montant recu</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>