force-app/main/default/objects/NotificationSA__e/fields/fsl_nbIntervenantProchainRdv__c.field-meta.xml
<CustomField>
    <fullName>fsl_nbIntervenantProchainRdv__c</fullName>
    <description>CGI - FSL : Ce champ contient le nombre d&apos;interbenants du prochian rendez-vous.</description>
    <label>Nb d&apos;intervenants prochain rdv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>