force-app/main/default/objects/NotificationSA__e/fields/fsl_recommandationsChantier__c.field-meta.xml
<CustomField>
    <fullName>fsl_recommandationsChantier__c</fullName>
    <description>CGI - FSL : Ce champ contient les recommandations chantier pour un RDV</description>
    <label>Recommandations chantier</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>