force-app/main/default/objects/NotificationSA__e/fields/fsl_reservesChantier__c.field-meta.xml
<CustomField>
    <fullName>fsl_reservesChantier__c</fullName>
    <description>CGI - FSL : Les réserves chantier pour un RDV</description>
    <label>Réserves chantier</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>