force-app/main/default/objects/NotificationSA__e/fields/fsl_reservesProduits__c.field-meta.xml
<CustomField>
    <fullName>fsl_reservesProduits__c</fullName>
    <description>CGI - FSL : Les réserves produits pour un RDV</description>
    <label>Réserves produits</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>