force-app/main/default/objects/NotificationSA__e/fields/fsl_reservesTravaux__c.field-meta.xml
<CustomField>
    <fullName>fsl_reservesTravaux__c</fullName>
    <description>CGI - FSL : Les réserves sur les travaux d&apos;un RDV</description>
    <label>Réserves travaux</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>