force-app/main/default/objects/NotificationSA__e/fields/fsl_responsabiliteChantier__c.field-meta.xml
<CustomField>
    <fullName>fsl_responsabiliteChantier__c</fullName>
    <description>CGI - FSL : La responsabilité chantier d&apos;un RDV</description>
    <label>Responsabilité chantier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>