force-app/main/default/objects/NotificationSA__e/fields/fsl_responsabiliteProduits__c.field-meta.xml
<CustomField>
    <fullName>fsl_responsabiliteProduits__c</fullName>
    <description>CGI - FSL : La responsabilité sur les produits pour un RDV</description>
    <label>Responsabilité produits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>