force-app/main/default/objects/NotificationSA__e/fields/fsl_responsabiliteTravaux__c.field-meta.xml
<CustomField>
    <fullName>fsl_responsabiliteTravaux__c</fullName>
    <description>CGI - FSL : La responsabilité sur les travaux d&apos;un RDV</description>
    <label>Responsabilité travaux</label>
    <length>255</length>
    <type>Text</type>
</CustomField>