force-app/main/default/objects/NotificationSA__e/fields/fsl_ressource__c.field-meta.xml
<CustomField>
    <fullName>fsl_ressource__c</fullName>
    <description>CGI - FSL : Ce champ contient les ressources assignées au rendez-vous.</description>
    <label>Ressource</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>