force-app/main/default/objects/NotificationSA__e/fields/fsl_retoursReservesClient__c.field-meta.xml
<CustomField>
    <fullName>fsl_retoursReservesClient__c</fullName>
    <description>CGI - FSL : Ce champ contient le retours/réserves du client.</description>
    <label>Retours/réserves client</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>