force-app/main/default/objects/NotificationSA__e/fields/fsl_retoursReservesKparK__c.field-meta.xml
<CustomField>
    <fullName>fsl_retoursReservesKparK__c</fullName>
    <description>CGI - FSL : Ce champ contient le retours/réserves de K par K.</description>
    <label>Retours/réserves KparK</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>