force-app/main/default/objects/NotificationSA__e/fields/fsl_scheduledEndDate__c.field-meta.xml
<CustomField>
    <fullName>fsl_scheduledEndDate__c</fullName>
    <description>CGI - FSL : Ce champ contient la fin planifiée du rendez-vous.</description>
    <label>Scheduled end date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>