force-app/main/default/objects/NotificationSA__e/fields/fsl_scheduledStartDate__c.field-meta.xml
<CustomField>
    <fullName>fsl_scheduledStartDate__c</fullName>
    <description>CGI - FSL : Ce champ contient le début planifié du rendez-vous.</description>
    <label>Scheduled start date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>