force-app/main/default/objects/NotificationSA__e/fields/fsl_signatureClient__c.field-meta.xml
<CustomField>
    <fullName>fsl_signatureClient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CGI - FSL : Ce champ indique si la signature du client est fournie.</description>
    <label>Signature client</label>
    <type>Checkbox</type>
</CustomField>